@@ -4,16 +4,16 @@
  * @author Sahil Gupta
  * @date December 2012
  */
- 
+
 /* LICENSE
  * Copyright 2013 Sahil Gupta
  * Licensed under the Apache License, Version 2.0 (the "License");
  * You may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  * 	http://www.apache.org/licenses/LICENSE-2.0
- * 
- * Unless required by applicable law or agreed to in writing, 
+ *
+ * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
@@ -31,28 +31,35 @@
 
 
 /**
- * @brief Return count of entries in database
- * @param querystring 
+ * @brief Return id of last entry in database
+ * @param querystring
  * @return count
  * @author SG
  */
-static int get_field_count(const char *querystring)
+static int get_field_lastid(const char *querystring)
 {
 	sqlite3_stmt *stmt = NULL;
 	char query[QUERY_SIZE];
 	int status;
-	
-	/* Query to get field count */
+	const char *id;
+
+	/* Query to get field id */
 	strcpy(query, querystring);
 	sqlite3_prepare_v2(get_kwdb(),query,-1,&stmt,0);
-	
+
 	status = sqlite3_step(stmt);
-	if(status == SQLITE_ROW) { /* Return field count */
-		status = atoi((const char*)sqlite3_column_text(stmt,0));
-		sqlite3_finalize(stmt);
-		return status;
+	if(status == SQLITE_ROW) {
+		id = (const char *)sqlite3_column_text(stmt,0);
+		if(id == NULL) {
+			sqlite3_finalize(stmt);
+			return NO_DB_ENTRY;
+		} else {
+			status = atoi(id);
+			sqlite3_finalize(stmt);
+			return status;
+		}
 	}
-	
+
 	sqlite3_finalize(stmt);
 	return KW_FAIL;
 }
@@ -61,21 +68,21 @@ static int get_field_count(const char *querystring)
  * @brief Generate id for new file to be added in kwest
  * @param abspath - Absolute Path of File
  * @return fno
- * @author SG 
+ * @author SG
  */
 int set_file_id(const char *abspath)
 {
 	int tmp;
-	
+
 	/* Check if file exists */
 	tmp = get_file_id((strrchr(abspath,'/')+1)); /* Get File ID */
-	if(tmp != KW_FAIL){ 
+	if(tmp != KW_FAIL){
 		return KW_FAIL; /* Return if file already exists */
 	}
-	
+
 	/* Query to get maximum no of files existing in database */
-	tmp = get_field_count("select count(fno) from FileDetails;");
-	
+	tmp = get_field_lastid("select max(fno) from FileDetails;");
+
 	if(tmp == KW_FAIL) {
 		return KW_FAIL;
 	} else if(tmp == NO_DB_ENTRY) { /* No Entry */
@@ -89,40 +96,40 @@ int set_file_id(const char *abspath)
  * @brief Generate id for new tag to be created in kwest
  * @param tagname
  * @param tagtype
- * @return tno 
- * @author SG 
+ * @return tno
+ * @author SG
  */
 int set_tag_id(const char *tagname,int tagtype)
 {
 	char query[QUERY_SIZE];
 	int tmp;
-	
+
 	/* Check if tag exists */
 	tmp = get_tag_id(tagname); /* Get Tag ID */
 	if(tmp != KW_FAIL){
 		return KW_FAIL; /* Return if tag already exists */
 	}
-	
+
 	/* Check type of tag : USER / SYSTEM */
 	if(tagtype == USER_TAG){
 		/* Get count of existing User Tags */
-		sprintf(query,"select count(tno) from TagDetails where tno>=%d;"
-		             ,USER_TAG_START);
-		tmp = get_field_count(query);
-		
-		if(tmp == KW_FAIL) { 
+		sprintf(query,"select max(tno) from TagDetails where tno>=%d "
+		              "and tno < %d;" ,USER_TAG_START, USER_MADE_TAG);
+		tmp = get_field_lastid(query);
+
+		if(tmp == KW_FAIL) {
 			return KW_FAIL;
 		} else if (tmp == NO_DB_ENTRY) { /* No Entry */
-			return USER_TAG_START; 
+			return USER_TAG_START;
 		} else { /* Increment Tag ID */
-			return (tmp + USER_TAG_START);
+			return (tmp + 1);
 		}
 	} else { /* tagtype == SYSTEM_TAG */
 		/* Get count of existing System Tags */
-		sprintf(query,"select count(tno) from TagDetails where tno<%d;"
+		sprintf(query,"select max(tno) from TagDetails where tno<%d;"
 		             ,USER_TAG_START);
-		tmp = get_field_count(query);
-		
+		tmp = get_field_lastid(query);
+
 		if(tmp == KW_FAIL) {
 			return KW_FAIL;
 		} else if (tmp == NO_DB_ENTRY) { /* No Entry */
@@ -136,7 +143,7 @@ int set_tag_id(const char *tagname,int tagtype)
 
 /**
  * @brief Return id for specified field
- * @param querystring 
+ * @param querystring
  * @param fieldname
  * @return field_id
  * @author SG HP
@@ -146,19 +153,19 @@ static int get_field_id(const char *querystring, const char *fieldname)
 	sqlite3_stmt *stmt = NULL;
 	char query[QUERY_SIZE];
 	int status;
-	
+
 	/* Query to get field_id */
 	strcpy(query, querystring);
 	sqlite3_prepare_v2(get_kwdb(),query,-1,&stmt,0);
 	sqlite3_bind_text(stmt,1, fieldname,-1,SQLITE_STATIC);
-	
+
 	status = sqlite3_step(stmt);
 	if(status == SQLITE_ROW) { /* Return field_id if entry exists */
 		status = atoi((const char*)sqlite3_column_text(stmt,0));
 		sqlite3_finalize(stmt);
 		return status;
 	}
-	
+
 	sqlite3_finalize(stmt);
 	return KW_FAIL;
 }
@@ -166,7 +173,7 @@ static int get_field_id(const char *querystring, const char *fieldname)
 /**
  * @brief Return id for file in kwest
  * @param fname - file name
- * @return fno 
+ * @return fno
  * @author SG HP
  */
 int get_file_id(const char *fname)
@@ -178,7 +185,7 @@ int get_file_id(const char *fname)
 /**
  * @brief Return id for a tag in kwest
  * @param tname - tagname
- * @return tno 
+ * @return tno
  * @author SG HP
  */
 int get_tag_id(const char *tname)
@@ -190,7 +197,7 @@ int get_tag_id(const char *tname)
 
 /**
  * @brief Retrieve fieldname if exists
- * @param querystring 
+ * @param querystring
  * @param fieldno
  * @return fieldname
  * @author SG HP
@@ -201,23 +208,23 @@ const char *get_field_name(const char *querystring, int fieldno)
 	char query[QUERY_SIZE];
 	int status;
 	const char *fieldname = NULL;
-	
+
 	/* Query to get fieldname */
 	sprintf(query, querystring, fieldno);
 	status = sqlite3_prepare_v2(get_kwdb(),query,-1,&stmt,0);
-	
+
 	status = sqlite3_step(stmt);
 	if(status == SQLITE_ROW){ /* return fieldname if exists */
 		fieldname = strdup((const char*)sqlite3_column_text(stmt,0));
 	}
-	
+
 	sqlite3_finalize(stmt);
 	return fieldname;
 }
 
 /**
  * @brief Retrieve filename by its id
- * @param fno - file number 
+ * @param fno - file number
  * @return filename
  * @author SG HP
  */
